components/envoy-gateway/configs/base/internal-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-cluster-gateway
  namespace: gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-envoy-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.ilysium.io"
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   hostname: "*.ilysium.io"
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: gateway-tls-secret
    #   allowedRoutes:
    #     namespaces:
    #       from: All
