components/envoy-gateway/configs/base/perimeter-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: perimeter-cluster-gateway
  namespace: gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: perimeter-envoy-proxy
      namespace: gateway-system
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.ilysium.io"
